--- a/app/src/main/res/layout/customer_fragment_profile.xml
+++ b/app/src/main/res/layout/customer_fragment_profile.xml
@@ -25,6 +25,42 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="@color/light_green">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="10dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:gravity="center_horizontal"
+                    android:text="Number of Food ordered"
+                    android:textColor="@color/green"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/tvOrder"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:gravity="center_horizontal"
+                    android:textSize="20dp" />
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="10dp"
             android:backgroundTint="@color/light_green">
 
             <LinearLayout
@@ -39,7 +75,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_semibold"
                     android:text="Name -"
-                    android:textSize="18dp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/tvName"
@@ -72,7 +108,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_semibold"
                     android:text="ID - "
-                    android:textSize="18dp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/tvID"
@@ -105,7 +141,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_semibold"
                     android:text="Email - "
-                    android:textSize="18dp" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/tvEmail"
@@ -114,40 +150,6 @@
                     android:fontFamily="@font/poppins_semibold"
                     android:textColor="@color/green"
                     android:textSize="19dp" />
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="10dp"
-            android:backgroundTint="@color/light_green">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="10dp">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins_semibold"
-                    android:gravity="center_horizontal"
-                    android:text="Number of Food ordered"
-                    android:textColor="@color/green"
-                    android:textSize="20dp" />
-
-                <TextView
-                    android:id="@+id/tvOrder"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins_semibold"
-                    android:gravity="center_horizontal"
-                    android:textSize="20dp" />
 
             </LinearLayout>
 
@@ -165,7 +167,7 @@
             android:text="Change Password"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="17dp" />
+            android:textSize="17sp" />
 
         <Button
             android:id="@+id/btnLogout"
@@ -179,7 +181,7 @@
             android:text="Logout"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="17dp" />
+            android:textSize="17sp" />
 
     </LinearLayout>
 
