--- a/app/src/main/res/layout/customer_provider_layout.xml
+++ b/app/src/main/res/layout/customer_provider_layout.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:id="@+id/llCPLayout"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
@@ -25,7 +26,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/tvCompanyName"
@@ -38,24 +40,76 @@
                         android:textColor="@color/green"
                         android:textSize="20dp" />
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_medium"
+                            android:paddingVertical="10dp"
+                            android:paddingStart="10dp"
+                            android:text="ID - "
+                            android:textColor="@color/green"
+                            android:textSize="14sp" />
+
+                        <TextView
+                            android:id="@+id/tvID"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_medium"
+                            android:paddingVertical="10dp"
+                            android:textSize="14sp" />
+
+                    </LinearLayout>
+
                 </LinearLayout>
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:gravity="end">
+                    android:layout_height="match_parent"
+                    android:layout_weight="2">
 
                     <TextView
+                        android:id="@+id/tvAvailable"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_marginTop="10dp"
                         android:background="@color/green"
                         android:fontFamily="@font/poppins_semibold"
+                        android:gravity="center"
                         android:padding="10dp"
                         android:text="Available"
-                        android:textAlignment="center"
                         android:textColor="@color/white" />
                 </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_medium"
+                    android:paddingVertical="10dp"
+                    android:paddingStart="10dp"
+                    android:text="Email - "
+                    android:textColor="@color/green"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/tvEmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_medium"
+                    android:paddingVertical="10dp"
+                    android:textSize="14sp" />
+
             </LinearLayout>
 
 
@@ -66,9 +120,8 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="2dp"
                     android:layout_weight="1"
                     android:background="@color/light_green"
                     android:orientation="vertical"
@@ -81,19 +134,19 @@
                         android:text="Location :" />
 
                     <TextView
+                        android:id="@+id/tvLocation"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/poppins_semibold"
-                        android:text="Pune" />
+                        android:fontFamily="@font/poppins_semibold" />
 
 
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="2dp"
-                    android:layout_weight="1.2"
+                    android:layout_weight="1"
                     android:background="@color/light_green"
                     android:orientation="vertical"
                     android:padding="10dp">
@@ -105,10 +158,10 @@
                         android:text="Time :" />
 
                     <TextView
+                        android:id="@+id/tvTime"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/poppins_semibold"
-                        android:text="8:00 Am- 12:00pm" />
+                        android:fontFamily="@font/poppins_semibold" />
 
                 </LinearLayout>
 
