Customer Provider Food Fragment Completed

--- a/app/src/main/res/layout/customer_provider_layout.xml
+++ b/app/src/main/res/layout/customer_provider_layout.xml
@@ -98,6 +98,31 @@
                     android:fontFamily="@font/poppins_medium"
                     android:paddingVertical="10dp"
                     android:paddingStart="10dp"
+                    android:text="Provider Name - "
+                    android:textColor="@color/green"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/tvProviderName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_medium"
+                    android:paddingVertical="10dp"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_medium"
+                    android:paddingVertical="10dp"
+                    android:paddingStart="10dp"
                     android:text="Email - "
                     android:textColor="@color/green"
                     android:textSize="14sp" />
