--- a/app/src/main/res/layout/fragment_customer_provider_food.xml
+++ b/app/src/main/res/layout/fragment_customer_provider_food.xml
@@ -40,11 +40,17 @@
 
     </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/llData"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/relLayout1"
-        android:orientation="vertical" />
+        android:layout_below="@+id/relLayout1">
+
+        <LinearLayout
+            android:id="@+id/llData"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+
+    </androidx.core.widget.NestedScrollView>
 
 </RelativeLayout>
