--- a/app/src/main/res/layout/layout_for_customer_all_food.xml
+++ b/app/src/main/res/layout/layout_for_customer_all_food.xml
@@ -82,6 +82,25 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_medium"
+                    android:text="Expiry Time - "
+                    android:textColor="@color/green" />
+
+                <TextView
+                    android:id="@+id/tvProviderName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_medium" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_medium"
                     android:text="Cooked / Non-cooked - "
                     android:textColor="@color/green" />
 
@@ -112,6 +131,7 @@
             </LinearLayout>
 
             <Button
+                android:id="@+id/btnPlaceOrder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="20dp"
